--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "vite-lib-starter",
-  "version": "0.5.1",
-  "upperName": "ViteLibStarter",
-  "description": "vite-lib-starter",
+  "name": "avue-bpmn",
+  "version": "0.1.0",
+  "upperName": "AvueBpmn",
+  "description": "avue-bpmn",
   "author": "SoulLyoko <519052532@qq.com>",
-  "repository": "https://github.com/SoulLyoko/vite-lib-starter.git",
-  "homepage": "https://github.com/SoulLyoko/vite-lib-starter#readme",
+  "repository": "https://github.com/SoulLyoko/avue-bpmn.git",
+  "homepage": "https://github.com/SoulLyoko/avue-bpmn#readme",
   "private": false,
   "license": "MIT",
   "keywords": [
@@ -60,7 +60,13 @@
     "lint": "eslint --ext .ts,.vue ."
   },
   "dependencies": {
-    "eslint-plugin-import": "^2.26.0",
+    "@vueuse/core": "^9.1.0",
+    "bpmn-js": "^9.3.2",
+    "diagram-js": "^8.9.0",
+    "file-saver": "^2.0.5",
+    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
+    "lodash-unified": "^1.0.2",
     "vue-demi": "^0.13.8"
   },
   "peerDependencies": {
@@ -75,8 +81,12 @@
   "devDependencies": {
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
+    "@smallwei/avue": "^3.1.0",
+    "@types/file-saver": "^2.0.5",
     "@types/fs-extra": "^9.0.13",
     "@types/gulp": "^4.0.9",
+    "@types/lodash": "^4.14.184",
+    "@types/lodash-es": "^4.17.6",
     "@types/node": "^18.7.9",
     "@typescript-eslint/eslint-plugin": "^5.33.1",
     "@typescript-eslint/parser": "^5.33.1",
@@ -88,8 +98,11 @@
     "@vue/tsconfig": "^0.1.3",
     "c8": "^7.12.0",
     "conventional-changelog-cli": "^2.2.2",
+    "element-plus": "^2.2.14",
+    "element-ui": "^2.15.9",
     "enquirer": "^2.3.6",
     "eslint": "^8.22.0",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.3.0",
@@ -111,7 +124,7 @@
     "vitepress": "^0.22.4",
     "vitest": "^0.22.1",
     "vue": "^3.2.37",
-    "vue-template-compiler": "^2.7.9",
+    "vue-template-compiler": "2.6.14",
     "vue-tsc": "^0.40.1"
   },
   "lint-staged": {
