--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,5 +1,5 @@
 {
   "extends": "./tsconfig.json",
-  "include": ["packages"],
+  "include": ["packages", "types"],
   "exclude": ["packages/.vitepress", "packages/**/demo", "packages/**/test", "**/*.md"]
 }
