--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   "private": false,
   "license": "MIT",
   "keywords": [
-    "vite",
-    "lib",
-    "starter"
+    "vue",
+    "bpmn-js",
+    "avue",
+    "bpmn"
   ],
   "files": [
     "dist",
@@ -60,13 +61,13 @@
     "lint": "eslint --ext .ts,.vue ."
   },
   "dependencies": {
-    "bpmn-js": "^9.3.2",
+    "bpmn-js": "^9.4.0",
     "diagram-js": "^8.9.0",
     "file-saver": "^2.0.5",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "lodash-unified": "^1.0.2",
-    "vue-demi": "^0.13.8"
+    "vue-demi": "^0.13.11"
   },
   "peerDependencies": {
     "@vue/composition-api": "^1.7.0",
@@ -78,33 +79,33 @@
     }
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.0.3",
-    "@commitlint/config-conventional": "^17.0.3",
+    "@commitlint/cli": "^17.1.1",
+    "@commitlint/config-conventional": "^17.1.0",
     "@smallwei/avue": "^3.1.0",
     "@types/file-saver": "^2.0.5",
     "@types/fs-extra": "^9.0.13",
     "@types/gulp": "^4.0.9",
     "@types/lodash": "^4.14.184",
     "@types/lodash-es": "^4.17.6",
-    "@types/node": "^18.7.9",
-    "@typescript-eslint/eslint-plugin": "^5.33.1",
-    "@typescript-eslint/parser": "^5.33.1",
+    "@types/node": "^18.7.14",
+    "@typescript-eslint/eslint-plugin": "^5.36.0",
+    "@typescript-eslint/parser": "^5.36.0",
     "@vitejs/plugin-vue": "^2.3.4",
     "@vitejs/plugin-vue2": "^1.1.2",
-    "@vue/compiler-sfc": "^3.2.37",
+    "@vue/compiler-sfc": "^3.2.38",
     "@vue/composition-api": "^1.7.0",
     "@vue/test-utils": "^2.0.2",
     "@vue/tsconfig": "^0.1.3",
     "c8": "^7.12.0",
     "conventional-changelog-cli": "^2.2.2",
-    "element-plus": "^2.2.14",
+    "element-plus": "^2.2.15",
     "element-ui": "^2.15.9",
     "enquirer": "^2.3.6",
-    "eslint": "^8.22.0",
+    "eslint": "^8.23.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-vue": "^9.3.0",
+    "eslint-plugin-vue": "^9.4.0",
     "esno": "^0.16.3",
     "fs-extra": "^10.1.0",
     "gulp": "^4.0.2",
@@ -115,16 +116,17 @@
     "jsdom": "^20.0.0",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
-    "sass": "^1.54.5",
+    "sass": "^1.54.6",
+    "ts-node": "^10.9.1",
     "tsc-alias": "^1.7.0",
-    "typescript": "^4.7.4",
+    "typescript": "^4.8.2",
     "vite": "^2.9.15",
     "vite-plugin-vue2": "^2.0.2",
     "vitepress": "^0.22.4",
     "vitest": "^0.22.1",
-    "vue": "^3.2.37",
+    "vue": "^3.2.38",
     "vue-template-compiler": "2.6.14",
-    "vue-tsc": "^0.40.1"
+    "vue-tsc": "^0.40.4"
   },
   "lint-staged": {
     "*.{ts,vue}": [
