--- a/package.json
+++ b/package.json
@@ -62,7 +62,11 @@
   },
   "dependencies": {
     "bpmn-js": "^9.4.0",
+    "bpmn-js-bpmnlint": "^0.19.0",
+    "bpmn-js-token-simulation": "^0.27.0",
+    "bpmnlint": "^7.8.0",
     "diagram-js": "^8.9.0",
+    "diagram-js-minimap": "^2.1.1",
     "file-saver": "^2.0.5",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
@@ -81,7 +85,7 @@
   "devDependencies": {
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
-    "@smallwei/avue": "^3.1.0",
+    "@smallwei/avue": "^2.9.15",
     "@types/file-saver": "^2.0.5",
     "@types/fs-extra": "^9.0.13",
     "@types/gulp": "^4.0.9",
@@ -94,7 +98,7 @@
     "@vitejs/plugin-vue2": "^1.1.2",
     "@vue/compiler-sfc": "3.2.37",
     "@vue/composition-api": "^1.7.0",
-    "@vue/test-utils": "^2.0.2",
+    "@vue/test-utils": "1.3.0",
     "@vue/tsconfig": "^0.1.3",
     "c8": "^7.12.0",
     "conventional-changelog-cli": "^2.2.2",
@@ -116,6 +120,7 @@
     "jsdom": "^20.0.0",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
+    "rollup-plugin-bpmnlint": "^0.3.0",
     "sass": "^1.54.7",
     "tsc-alias": "^1.7.0",
     "typescript": "^4.8.2",
@@ -123,7 +128,7 @@
     "vite-plugin-vue2": "^2.0.2",
     "vitepress": "^0.22.4",
     "vitest": "^0.22.1",
-    "vue": "3.2.37",
+    "vue": "^2.6.14",
     "vue-template-compiler": "2.6.14",
     "vue-tsc": "^0.40.5"
   },
