--- a/package.json
+++ b/package.json
@@ -85,7 +85,7 @@
   "devDependencies": {
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
-    "@smallwei/avue": "^2.9.15",
+    "@smallwei/avue": "^3.1.0",
     "@types/file-saver": "^2.0.5",
     "@types/fs-extra": "^9.0.13",
     "@types/gulp": "^4.0.9",
@@ -98,7 +98,7 @@
     "@vitejs/plugin-vue2": "^1.1.2",
     "@vue/compiler-sfc": "3.2.37",
     "@vue/composition-api": "^1.7.0",
-    "@vue/test-utils": "1.3.0",
+    "@vue/test-utils": "^2.0.2",
     "@vue/tsconfig": "^0.1.3",
     "c8": "^7.12.0",
     "conventional-changelog-cli": "^2.2.2",
@@ -128,7 +128,7 @@
     "vite-plugin-vue2": "^2.0.2",
     "vitepress": "^0.22.4",
     "vitest": "^0.22.1",
-    "vue": "^2.6.14",
+    "vue": "3.2.37",
     "vue-template-compiler": "2.6.14",
     "vue-tsc": "^0.40.5"
   },
