--- a/src/.bpmnlintrc
+++ b/src/.bpmnlintrc
@@ -1,7 +1,6 @@
 {
   "extends": "bpmnlint:recommended",
   "rules": {
-    "label-required": "error",
-    "no-disconnected": "error"
+    "label-required": "off"
   }
 }
