docs: dynamic import component for ssr

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
     "paths": {
       "@/*": ["src/*"],
       "~/*": ["packages/*"],
-      "avue-bpmn": ["packages"]
+      "avue-bpmn": ["packages"],
+      "avue-bpmn/*": ["packages/*"]
     },
     "types": ["vitest/globals"]
   },
